2020-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Rename job from build to ci

2020-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Small tweaks to CI YAML file

2020-12-10  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new CI badge

2020-11-21  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Use renamed r-ci repository URL

2020-11-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* .travis.yml: Switch to focal and bspm, activate macOS build

	* inst/tinytest/test_all_formats.R: untabify a section

2020-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_simple.R: Reactivate tests with added
	check.tzone=FALSE

2020-09-12  Dirk Eddelbuettel  <edd@debian.org>

	* docs/: Added package website
	* docs-src/: Added package website inputs

	* README.md: Added badge and short paragraph linking to documentation

2020-08-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.9

	* inst/tinytest/test_simple.R: Giving up on CRAN as timezone
	attributes are inconsistently set between machines

	* R/anytime.R: Change http:// to https://
	* man/anytime.Rd: Idem
	* man/anytime-package.Rd: Idem
	* README.md: Idem

2020-07-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.8

2020-07-22  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: No longer call tests in parallel

2020-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to 'bionic' and R 4.0.*

2020-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/init.R: Support OS detection for some flavours of Linux, add
	predicates to test e.g. .isUbuntu() vs .isFedora()
	* NAMESPACE: Import utils::read.table() for this

	* inst/tinytest/test_simple.R: Also skip if on Fedora as the CRAN